# time-granularity

./: README.md  requirements.txt  setup.cfg  setup.py
time_granularity/: __init__.py  time_granularity.py
time_granularity.egg-info/: PKG-INFO  SOURCES.txt
time_granularity_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
workflows/: workflow.yml
