[metadata]
name = time-granularity
version = 1.2
description = A Python package for managing time granularity with options to re-execute at different intervals.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrateekDutta2001/time-granularity
author = Prateek Dutta
author_email = prateekdutta2001@gmail.com

